self-reference cryoforge

--- a/tests/cryoforge/stac-search.ipynb
+++ b/tests/cryoforge/stac-search.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "    search = catalog.search(**search_kwargs)\n",
     "    print(search.get_parameters())\n",
-    "    \n",
+    "\n",
     "    hrefs = []\n",
     "    pages_count = 0\n",
     "    proj_matches = 0\n",
@@ -50,7 +50,7 @@
     "        pages_count += 1\n",
     "        for item in page:\n",
     "            if kwargs.get(\"debug\"):\n",
-    "                print(f\"fetching page {page_count}\")\n",
+    "                print(f\"fetching page {pages_count}\")\n",
     "            for asset in item.assets.values():\n",
     "                if \"data\" in asset.roles and asset.href.endswith(\".nc\"):\n",
     "                    hrefs.append(asset.href)\n",
@@ -121,7 +121,7 @@
     "\n",
     "filters = [\n",
     "    {\"op\": \">=\", \"args\": [{\"property\": \"percent_valid_pixels\"}, 50]},\n",
-    "    {\"op\": \"<=\", \"args\": [{\"property\": \"dt_days\"}, 8]}, # or date_dt \n",
+    "    {\"op\": \"<=\", \"args\": [{\"property\": \"dt_days\"}, 8]}, # or date_dt\n",
     "    {\"op\": \"=\", \"args\": [{\"property\": \"sat:orbit_state\"}, \"ascending\"]},\n",
     "]\n",
     "\n",
