--- a/tests/cryoforge/stac-search.ipynb
+++ b/tests/cryoforge/stac-search.ipynb
@@ -20,25 +20,23 @@
     "from pystac_client import Client\n",
     "import time\n",
     "\n",
+    "\n",
     "def search_stac(stac_catalog, page_size=100, filter_list=[], **kwargs):\n",
     "    \"\"\"\n",
     "    Returns only the url to the data asset, for ITS_LIVE a netcdf file.\n",
     "    \"\"\"\n",
     "    catalog = Client.open(stac_catalog)\n",
-    "    search_kwargs = {\n",
-    "        \"collections\": [\"itslive-granules\"],\n",
-    "        \"limit\": page_size,\n",
-    "        **kwargs\n",
-    "    }\n",
+    "    search_kwargs = {'collections': ['itslive-granules'], 'limit': page_size, **kwargs}\n",
     "\n",
     "    def build_cql2_filter(filters_list):\n",
     "        if not filters_list:\n",
     "            return None\n",
-    "        return filters_list[0] if len(filters_list) == 1 else {\"op\": \"and\", \"args\": filters_list}\n",
+    "        return filters_list[0] if len(filters_list) == 1 else {'op': 'and', 'args': filters_list}\n",
+    "\n",
     "    if filter_list:\n",
     "        filters = build_cql2_filter(filter_list)\n",
-    "        search_kwargs[\"filter\"] = build_cql2_filter(filters)\n",
-    "        search_kwargs[\"filter_lang\"] = \"cql2-json\"\n",
+    "        search_kwargs['filter'] = build_cql2_filter(filters)\n",
+    "        search_kwargs['filter_lang'] = 'cql2-json'\n",
     "\n",
     "    search = catalog.search(**search_kwargs)\n",
     "    print(search.get_parameters())\n",
@@ -49,13 +47,13 @@
     "    for page in search.pages():\n",
     "        pages_count += 1\n",
     "        for item in page:\n",
-    "            if kwargs.get(\"debug\"):\n",
-    "                print(f\"fetching page {pages_count}\")\n",
+    "            if kwargs.get('debug'):\n",
+    "                print(f'fetching page {pages_count}')\n",
     "            for asset in item.assets.values():\n",
-    "                if \"data\" in asset.roles and asset.href.endswith(\".nc\"):\n",
+    "                if 'data' in asset.roles and asset.href.endswith('.nc'):\n",
     "                    hrefs.append(asset.href)\n",
-    "        time.sleep(0.1) # we can remove this one, just to avoid overwhelming the server\n",
-    "    print(f\"Requested pages: {pages_count}\")\n",
+    "        time.sleep(0.1)  # we can remove this one, just to avoid overwhelming the server\n",
+    "    print(f'Requested pages: {pages_count}')\n",
     "    return hrefs"
    ]
   },
@@ -90,46 +88,30 @@
     "%%time\n",
     "\n",
     "roi = {\n",
-    "    \"type\": \"Polygon\",\n",
-    "    \"coordinates\": [[\n",
-    "            [\n",
-    "              -35.11660324172296,\n",
-    "              71.70932130492467\n",
-    "            ],\n",
-    "            [\n",
-    "              -32.56940542707364,\n",
-    "              71.70932130492467\n",
-    "            ],\n",
-    "            [\n",
-    "              -32.56940542707364,\n",
-    "              72.26734859624985\n",
-    "            ],\n",
-    "            [\n",
-    "              -35.11660324172296,\n",
-    "              72.26734859624985\n",
-    "            ],\n",
-    "            [\n",
-    "              -35.11660324172296,\n",
-    "              71.70932130492467\n",
-    "            ]\n",
-    "          ]\n",
-    "    ]\n",
+    "    'type': 'Polygon',\n",
+    "    'coordinates': [\n",
+    "        [\n",
+    "            [-35.11660324172296, 71.70932130492467],\n",
+    "            [-32.56940542707364, 71.70932130492467],\n",
+    "            [-32.56940542707364, 72.26734859624985],\n",
+    "            [-35.11660324172296, 72.26734859624985],\n",
+    "            [-35.11660324172296, 71.70932130492467],\n",
+    "        ]\n",
+    "    ],\n",
     "}\n",
     "\n",
     "# Full list of properties can be found by inspecting a STAC item from the collection\n",
     "# e.g. https://stac.itslive.cloud/collections/itslive-granules/items/S2B_MSIL1C_20250410T133729_N0511_R067_T33XXK_20250410T171508_X_S2A_MSIL1C_20250417T133731_N0511_R067_T33XXK_20250417T205237_G0120V02_P054\n",
     "\n",
     "filters = [\n",
-    "    {\"op\": \">=\", \"args\": [{\"property\": \"percent_valid_pixels\"}, 50]},\n",
-    "    {\"op\": \"<=\", \"args\": [{\"property\": \"dt_days\"}, 8]}, # or date_dt\n",
-    "    {\"op\": \"=\", \"args\": [{\"property\": \"sat:orbit_state\"}, \"ascending\"]},\n",
+    "    {'op': '>=', 'args': [{'property': 'percent_valid_pixels'}, 50]},\n",
+    "    {'op': '<=', 'args': [{'property': 'dt_days'}, 8]},  # or date_dt\n",
+    "    {'op': '=', 'args': [{'property': 'sat:orbit_state'}, 'ascending']},\n",
     "]\n",
     "\n",
-    "items = search_stac(\"https://stac.itslive.cloud\",\n",
-    "                    datetime=\"2010-06-01/2023-06-30\",\n",
-    "                    intersects=roi,\n",
-    "                    filter_list=filters,\n",
-    "                    page_size=2000)\n",
+    "items = search_stac(\n",
+    "    'https://stac.itslive.cloud', datetime='2010-06-01/2023-06-30', intersects=roi, filter_list=filters, page_size=2000\n",
+    ")\n",
     "len(items)"
    ]
   },
