ruff format and fix imports; ignore more ruff rules for cryoforge for now

--- a/tests/cryoforge/serverless-search.ipynb
+++ b/tests/cryoforge/serverless-search.ipynb
@@ -22,15 +22,16 @@
    "source": [
     "import json\n",
     "import logging\n",
-    "import os\n",
     "import math\n",
+    "import os\n",
     "\n",
-    "import rustac\n",
     "import duckdb\n",
+    "import rustac\n",
     "import s3fs\n",
     "\n",
     "# from pqdm.threads import pqdm\n",
-    "from shapely.geometry import shape, box\n",
+    "from shapely.geometry import box, shape\n",
+    "\n",
     "\n",
     "logging.basicConfig()\n",
     "logger = logging.getLogger()\n",
